--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ nav ul li a.active {
 .hero-text h2 {
   font-size: 28px;
   margin-bottom: 15px;
-  color: #FFD700;
+  color: #fff;
 }
 
 /* ===== TYPING TEXT EFFECT ===== */
@@ -207,7 +207,7 @@ nav ul li a.active {
 }
 
 .hero-text .btn: hover {
-  background: #ff5722;
+  background: #00ffff;
 }
 
 /* ================= ABOUT ================= */
@@ -298,8 +298,8 @@ nav ul li a.active {
 
 .service-points {
   list-style: none;
-  margin-top: 10px;
   padding: 0;
+  margin-top: 10px;
 }
 
 .service-points li {
@@ -314,12 +314,13 @@ nav ul li a.active {
   color: #ff9800;
   margin-right: 10px;
   font-size: 16px;
-  transition: transform 0.3s ease;
+  flex-shrink: 0;
 }
 
-.service-points li:hover i {
-  transform: scale(1.3);
+.service-points li: hover i {
+  transform: scale(1.2);
   color: #ff5722;
+  transition: transform 0.3s ease;
 }
 
 /* ================= PORTFOLIO ================= */
@@ -500,7 +501,7 @@ footer a {
   transition: color 0.3s, transform 0.3s;
 }
 
-footer a:hover {
+footer a: hover {
   color: #fff;
   transform: scale(1.2);
 }
@@ -519,7 +520,7 @@ footer a:hover {
   transition: color 0.3s, transform 0.3s;
 }
 
-.social-icons a:hover {
+.social-icons a: hover {
   color: #fff;
   transform: scale(1.2);   /* thoda zoom effect on hover */
 }
